# grimoire

./: .gitignore  CONFIGURATION.md  LICENSE  README.md  USAGE.md  pyproject.toml
src/grimoire/: __init__.py  cli.py  config.py  init.py  searcher.py
