[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grimoire"
version = "1.0.0"
authors = [
  { name="Development Team" },
]
description = "Flexible technical documentation and source code search tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tomli>=2.0.0",  # for Python < 3.11
    "tomli-w>=1.0.0"  # for writing TOML files
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Text Processing :: General",
    "Topic :: Software Development :: Documentation",
]

[project.scripts]
grimoire = "grimoire.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grimoire"]